// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`permission story a user should only see public boards and boards the user was invited to: count 1`] = `33`;

exports[`permission story a user should only see public boards and boards the user was invited to: count 2`] = `30`;

exports[`permission story a user should only see public boards and boards the user was invited to: count 3`] = `34`;

exports[`permission story a user should only see public boards and boards the user was invited to: list 1`] = `
Object {
  "data": Array [
    Object {
      "createdBy": "37",
      "id": "1",
      "isPrivate": false,
      "name": "Reiciendis quaerat",
      "owner": "37",
      "updatedBy": "37",
    },
    Object {
      "createdBy": "46",
      "id": "2",
      "isPrivate": true,
      "name": "Et eum",
      "owner": "46",
      "updatedBy": "46",
    },
    Object {
      "createdBy": "42",
      "id": "4",
      "isPrivate": false,
      "name": "Delectus qui maxime",
      "owner": "42",
      "updatedBy": "42",
    },
    Object {
      "createdBy": "52",
      "id": "9",
      "isPrivate": true,
      "name": "Veritatis nihil cum",
      "owner": "52",
      "updatedBy": "52",
    },
    Object {
      "createdBy": "81",
      "id": "11",
      "isPrivate": false,
      "name": "Aut incidunt consequatur",
      "owner": "81",
      "updatedBy": "81",
    },
    Object {
      "createdBy": "23",
      "id": "12",
      "isPrivate": false,
      "name": "Tenetur porro",
      "owner": "23",
      "updatedBy": "23",
    },
    Object {
      "createdBy": "84",
      "id": "13",
      "isPrivate": false,
      "name": "Suscipit aut cum",
      "owner": "84",
      "updatedBy": "84",
    },
    Object {
      "createdBy": "26",
      "id": "14",
      "isPrivate": false,
      "name": "Id cum",
      "owner": "26",
      "updatedBy": "26",
    },
    Object {
      "createdBy": "60",
      "id": "15",
      "isPrivate": false,
      "name": "Sunt nobis",
      "owner": "60",
      "updatedBy": "60",
    },
    Object {
      "createdBy": "73",
      "id": "16",
      "isPrivate": false,
      "name": "Est adipisci inventore",
      "owner": "73",
      "updatedBy": "73",
    },
  ],
  "pageInfo": Object {
    "hasNextPage": true,
    "hasPreviousPage": false,
  },
}
`;

exports[`permission story a user should only see public boards and boards the user was invited to: list 2`] = `
Object {
  "data": Array [
    Object {
      "createdBy": "37",
      "id": "1",
      "isPrivate": false,
      "name": "Reiciendis quaerat",
      "owner": "37",
      "updatedBy": "37",
    },
    Object {
      "createdBy": "42",
      "id": "4",
      "isPrivate": false,
      "name": "Delectus qui maxime",
      "owner": "42",
      "updatedBy": "42",
    },
    Object {
      "createdBy": "81",
      "id": "11",
      "isPrivate": false,
      "name": "Aut incidunt consequatur",
      "owner": "81",
      "updatedBy": "81",
    },
    Object {
      "createdBy": "23",
      "id": "12",
      "isPrivate": false,
      "name": "Tenetur porro",
      "owner": "23",
      "updatedBy": "23",
    },
    Object {
      "createdBy": "84",
      "id": "13",
      "isPrivate": false,
      "name": "Suscipit aut cum",
      "owner": "84",
      "updatedBy": "84",
    },
    Object {
      "createdBy": "26",
      "id": "14",
      "isPrivate": false,
      "name": "Id cum",
      "owner": "26",
      "updatedBy": "26",
    },
    Object {
      "createdBy": "60",
      "id": "15",
      "isPrivate": false,
      "name": "Sunt nobis",
      "owner": "60",
      "updatedBy": "60",
    },
    Object {
      "createdBy": "73",
      "id": "16",
      "isPrivate": false,
      "name": "Est adipisci inventore",
      "owner": "73",
      "updatedBy": "73",
    },
    Object {
      "createdBy": "24",
      "id": "17",
      "isPrivate": false,
      "name": "Est et",
      "owner": "24",
      "updatedBy": "24",
    },
    Object {
      "createdBy": "75",
      "id": "18",
      "isPrivate": false,
      "name": "In ipsum est",
      "owner": "75",
      "updatedBy": "75",
    },
  ],
  "pageInfo": Object {
    "hasNextPage": true,
    "hasPreviousPage": false,
  },
}
`;

exports[`permission story a user should only see public boards and boards the user was invited to: list 3`] = `
Object {
  "data": Array [
    Object {
      "createdBy": "37",
      "id": "1",
      "isPrivate": false,
      "name": "Reiciendis quaerat",
      "owner": "37",
      "updatedBy": "37",
    },
    Object {
      "createdBy": "46",
      "id": "2",
      "isPrivate": true,
      "name": "Et eum",
      "owner": "46",
      "updatedBy": "46",
    },
    Object {
      "createdBy": "42",
      "id": "4",
      "isPrivate": false,
      "name": "Delectus qui maxime",
      "owner": "42",
      "updatedBy": "42",
    },
    Object {
      "createdBy": "81",
      "id": "11",
      "isPrivate": false,
      "name": "Aut incidunt consequatur",
      "owner": "81",
      "updatedBy": "81",
    },
    Object {
      "createdBy": "23",
      "id": "12",
      "isPrivate": false,
      "name": "Tenetur porro",
      "owner": "23",
      "updatedBy": "23",
    },
    Object {
      "createdBy": "84",
      "id": "13",
      "isPrivate": false,
      "name": "Suscipit aut cum",
      "owner": "84",
      "updatedBy": "84",
    },
    Object {
      "createdBy": "26",
      "id": "14",
      "isPrivate": false,
      "name": "Id cum",
      "owner": "26",
      "updatedBy": "26",
    },
    Object {
      "createdBy": "60",
      "id": "15",
      "isPrivate": false,
      "name": "Sunt nobis",
      "owner": "60",
      "updatedBy": "60",
    },
    Object {
      "createdBy": "73",
      "id": "16",
      "isPrivate": false,
      "name": "Est adipisci inventore",
      "owner": "73",
      "updatedBy": "73",
    },
    Object {
      "createdBy": "24",
      "id": "17",
      "isPrivate": false,
      "name": "Est et",
      "owner": "24",
      "updatedBy": "24",
    },
  ],
  "pageInfo": Object {
    "hasNextPage": true,
    "hasPreviousPage": false,
  },
}
`;
